fixed white space

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -2,7 +2,6 @@
     main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 30px;
     }
     main section:nth-child(3) {
         grid-column: 3;
