--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,8 +1,8 @@
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 650px) {
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 30px;
+        grid-gap: 50px;
     }
     main section:nth-child(3) {
         grid-column: span 2;
