--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -22,8 +22,8 @@ header h2 {
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 20px;
-    margin: 20px;
+    grid-gap: 30px;
+    margin: 50px;
 }
 section {
     display: block;
